--- a/css/style.css
+++ b/css/style.css
@@ -86,11 +86,11 @@ main {
 }
 
 .botoes {
-   position: relative;
-   right: 5%;
-   bottom: 10%;
-   display: flex;
-   flex-direction: column;
+    position: fixed;
+    top: 10%;
+    left: 25%;
+    display: flex;
+    flex-direction: column;
 }
 
 .titulo {
